<resources>
    <string name="app_name">IdleBattleRoyale</string>

    <string name="weapons">Weapons</string>
    <string name="gamers">Gamers</string>
    <string name="teams">teams</string>
    <string name="achievements">Achievements</string>
    <string name="stats">Stats</string>

    <!--Weapons-->
    <string name="weapon1">Fist</string>
    <string name="weapon2">Super Punch Gloves</string>
    <string name="weapon3">Combat Knife</string>
    <string name="weapon4">Target Pistol</string>
    <string name="weapon5">Quail Shotgun</string>
    <string name="weapon6">Q18 Automatic</string>
    <string name="weapon7">Military Rifle</string>
    <string name="weapon8">Grenade Thrower</string>
    <string name="weapon9">Missile Stick</string>
    <string name="weapon10">Big Laser Alien Gun</string>

    <!--Buy Button-->
    <string name="buy">Buy</string>

    <!--Upgrade Button-->
    <!--<string name="level">Lvl\u0020</string>-->
    <string name="level">Lvl %1$s</string>

    <!--Buy x Buttons-->
    <string name="buyOne">Buy 1x</string>
    <string name="buyTen">Buy 10x</string>
    <string name="buyOneHundred">Buy 100x</string>
    <string name="buyMax">Buy Max</string>

    <!--Gamers-->
    <string name="gamer1">XxX360Johnny</string>
    <string name="gamer2">I🖤URMom</string>
    <string name="gamer3">420Killz</string>
    <string name="gamer4">ImTheBest</string>
    <string name="gamer5">SonicSpeed</string>
    <string name="gamer6">Hannah1996</string>
    <string name="gamer7">TheRealSteve3</string>
    <string name="gamer8">Pro_Rachel</string>
    <string name="gamer9">Pro_James</string>
    <string name="gamer10">Pro_Joe</string>

    <!--Teams-->
    <string name="team1">Noob Gaming</string>
    <string name="team2">Rank 1</string>
    <string name="team3">The Killerz</string>
    <string name="team4">Team Best</string>
    <string name="team5">Speedy Fast</string>
    <string name="team6">GirlsOnly</string>
    <string name="team7">Real Gamers</string>
    <string name="team8">GO Team</string>
    <string name="team9">Team Solid</string>
    <string name="team10">Elite Gamers</string>

    <!--Achievements-->
    <string name="achievement1">Knife\n\nLvl 100\n\nBonus: 1,000,000</string>
    <string name="achievement2">Boxing Gloves\n\nLvl 100\n\nBonus: 2,000,000</string>
    <string name="achievement3">Knife\n\nLvl 100\n\nBonus: 3,000,000</string>
    <string name="achievement4">Pistol\n\nLvl 100\n\nBonus: 4,000,000</string>
    <string name="achievement5">Shotgun\n\nLvl 100\n\nBonus: 5,000,000</string>
    <string name="achievement6">Machine Gun\n\nLvl 100\n\nBonus: 6,000,000</string>
    <string name="achievement7">Sniper Rifle\n\nLvl 100\n\nBonus: 7,000,000</string>
    <string name="achievement8">Grenade Launcher\n\nLvl 100\n\nBonus: 8,000,000</string>
    <string name="achievement9">Rocket Launcher\n\nLvl 100\n\nBonus: 9,000,000</string>
    <string name="achievement10">Laser Gun\n\nLvl 100\n\nBonus: 10,000,000</string>
    <string name="achievement11">Earn 1,000,000\n\nTotal\n\nBonus:1,000,000</string>
    <string name="achievement12">Have 1,000,000\n\nCurrent Total\n\nBonus:250,000</string>
    <string name="achievement13">Earn 10,000,000\n\nTotal\n\nBonus: 10,000,000</string>
    <string name="achievement14">Have 10,000,000\n\nCurrent Total\n\nBonus 2,500,000</string>
    <string name="achievement15">Earn 100,000,000\n\nTotal\n\nBonus 100,000,000</string>
    <string name="achievement16">Have 100,000,000\n\nCurrent Total\n\nBonus 25,000,000</string>
    <string name="achievement17">Earn 1,000,000,000\n\nTotal\n\nBonus 100,000,000</string>
    <string name="achievement18">Play For\n\n1 Month\n\nBonus: 100,000,000</string>
    <string name="achievement19">Play For\n\n6 Months\n\nBonus: 1,000,000,000</string>
    <string name="achievement20">Play For\n\n1 Year\n\nBonus: 1,000,000,000,000</string>

    <!--Stats-->
    <string name="totalSinceReset">Total Since Reset: %1$s</string>
    <string name="lifetimeTotal">Lifetime Total Earned: %1$s</string>
    <string name="dateStarted">Date Started Playing: %1$s</string>
    <string name="activeTimePlayed">Active Time Played: %1$s</string>
    <string name="timesReset">Times Prestiged: %1$s</string>
    <string name="prestige">Prestige</string>
    <string name="fullRestart">Full Restart</string>
    <string name="help">Help</string>
    <string name="prestigeMessage">Prestige After Earning $1.00E+7 Since Reset</string>
    <string name="prestigeXP">Prestige XP: %1s</string>

    <!--Away Message-->
    <string name="away">You Were Away For</string>
    <string name="earned">Earning</string>
    <string name="doubleMoney">Watch an ad for double the money: %1$s</string>
    <string name="ok">OK</string>
    <string name="watchAd">Watch Ad</string>

    <!--Help Message-->
    <string name="helpTitle">Help</string>
    <string name="helpMessage">1. Weapons are used to earn money from tournaments.\n\n2. Gamers use the weapons to automatically earn money.\n\n3. Teams provide a bonus to the Gamer in their team.\n\n4. Prestige to earn a bonus for weapon income.\n\n\nMoney can be earned even while away.</string>

</resources>
