<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <TextView
                    android:id="@+id/messageStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/away"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/messageStart"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/messageEarned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeAway"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/earned"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/moneyEarned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/messageEarned"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/messageDouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/moneyEarned"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/doubleMoney"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorPrimary"/>

                    <Button
                        android:id="@+id/okButton"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_below="@+id/messageDouble"
                        android:layout_marginBottom="10dp"
                        android:layout_toStartOf="@+id/centerPoint"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/custom_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/ok"/>

                <TextView
                    android:id="@+id/centerPoint"
                    android:text=""
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                    <Button
                        android:id="@+id/adButton"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_below="@+id/messageDouble"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/centerPoint"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/custom_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/watchAd"/>



            </RelativeLayout>



        </android.support.v7.widget.CardView>
    </LinearLayout>

